--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql=true
 
 # HikariCP settings
@@ -19,4 +19,5 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=HikariPool-Swager-ui
 
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.operationsSorter=method
